# querify

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
querify/: exceptions.py  query.py
querify/apps/: __init__.py  base_app.py  k8s.py  models.py  process.py  storage.py
querify/apps/clients/: __init__.py  k8s.py  storage.py
querify/database/: client.py
querify/sources/: __init__.py  base_source.py  process.py  storage.py
