[tool.poetry]
name = "querify"
version = "0.1.0"
description = "Querify your day to day data"
authors = ["Ohad Badihi <badihio@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
tabulate = "^0.9.0"
colorama = "^0.4.6"
kubernetes = "^29.0.0"
mo-sql-parsing = "^10.581.24094"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
