[tool.poetry]
name = "querify"
version = "0.1.0"
description = "An SQL interface for everyday data"
authors = ["Ohad Badihi <badihio@yahoo.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/badihio/querify"
repository = "https://github.com/badihio/querify"
keywords = ["cli", "sql", "query"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
tabulate = "^0.9.0"
colorama = "^0.4.6"
mo-sql-parsing = "^10.581.24094"
psutil = "^5.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
